--- a/sunbird-certificate-demo.ipynb
+++ b/sunbird-certificate-demo.ipynb
@@ -6,7 +6,8 @@
    "id": "c9e62b35-8012-4614-9d3d-e9212e7b698f",
    "metadata": {
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -20,7 +21,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "626b7b38-1773-4d3d-b1df-2e53f9372700",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -30,7 +35,8 @@
    "id": "bc7348d4-396b-4319-b6f8-47c210dc0768",
    "metadata": {
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -43,7 +49,11 @@
   {
    "cell_type": "markdown",
    "id": "ff7ffb5b-6200-41c6-98c9-794436daba85",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# create a issuer"
    ]
@@ -54,7 +64,8 @@
    "id": "8829ed91-6897-4050-8ac7-9e904d83818a",
    "metadata": {
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -96,7 +107,11 @@
   {
    "cell_type": "markdown",
    "id": "28ce5762-04ab-4fb2-b4ee-180a57e2d769",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# get issuer token\n"
    ]
@@ -105,7 +120,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "959b097e-bc94-449c-87e9-fbb12cd3694f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -141,7 +160,11 @@
   {
    "cell_type": "markdown",
    "id": "52c10e0b-2c99-44dd-932e-b1ccc3dde242",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# create a schema"
    ]
@@ -150,7 +173,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "e35ee24c-0e23-4137-81d1-eb21eb2b1a97",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -186,7 +213,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "2afc69be-7116-4616-960b-ce36d83757b3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -206,7 +237,11 @@
   {
    "cell_type": "markdown",
    "id": "2675f607-b28d-460a-8764-dc2b77fb5c1f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# get all schemas"
    ]
@@ -215,7 +250,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "3f9386dc-0f0b-4624-ae05-0c4d0ef8c418",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -247,7 +286,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "ea111905-0af2-411a-b154-dbccf5f2c89e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -278,7 +321,11 @@
   {
    "cell_type": "markdown",
    "id": "20d0ba59-8def-4962-b08e-416b4a697dfd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# upload template"
    ]
@@ -287,7 +334,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "b5310fff-cbab-4f31-8099-eee5304d65fe",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -319,7 +370,11 @@
   {
    "cell_type": "markdown",
    "id": "0f66689f-0dc9-4b29-857a-d3fc10098518",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# update schemas"
    ]
@@ -328,7 +383,11 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "f0c998a0-2202-405d-8c22-ee6fd31cb054",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -371,7 +430,11 @@
   {
    "cell_type": "markdown",
    "id": "5b09e13a-ff6e-4bb1-b42a-de7bb7b19eaa",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Delete schema ()"
    ]
@@ -380,7 +443,11 @@
    "cell_type": "code",
    "execution_count": 63,
    "id": "5533b533-d0f6-4d2d-8cda-1bc226fb6eda",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -421,7 +488,11 @@
   {
    "cell_type": "markdown",
    "id": "c2e79d55-234f-4f5a-891a-012cf343758e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# get all definitions"
    ]
@@ -430,7 +501,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "a0575067-b978-4e10-8f02-0ceb3674c3a0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -454,7 +529,11 @@
   {
    "cell_type": "markdown",
    "id": "c05eff15-55b9-4220-bca9-8af1af522986",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# get entity definition"
    ]
@@ -463,7 +542,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "5e507ee1-26c5-4276-8d41-c6ca78899048",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -490,7 +573,11 @@
   {
    "cell_type": "markdown",
    "id": "c54787df-fab0-4018-a279-e0813ce32ed9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Tests for newly added schem is here:"
    ]
@@ -498,7 +585,11 @@
   {
    "cell_type": "markdown",
    "id": "8563a4bd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "[TrainingCertifcate ](certificate-api.ipynb)"
    ]
@@ -507,7 +598,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "71b378ad",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
@@ -528,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
